objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>NRR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NRR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Calculates the discount ($) of the product using the following formula: 
(List Price * Quantity) - ( Sales Price * Quantity)</description>
        <formula>( ListPrice * Quantity) - ( UnitPrice * Quantity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the discount ($) of the product using the following formula: 
(List Price * Quantity) - ( Sales Price * Quantity)</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricebook_ID__c</fullName>
        <formula>PricebookEntry.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricebook ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Fixed__c</fullName>
        <label>Discount Fixed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price_TMP__c</fullName>
        <label>List Price TMP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_in_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <inlineHelpText>Number of months of the contract</inlineHelpText>
        <label>No of Months</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Credit__c</fullName>
        <label>Discount Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_ID_Long__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit id for opportunity product (Line Item)</inlineHelpText>
        <label>Product ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <formula>text(PricebookEntry.Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Subtype__c</fullName>
        <label>Discount Subtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook_Period__c</fullName>
        <formula>Opportunity.Pricebook2.Name</formula>
        <label>Pricebook Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Credit__c</fullName>
        <label>Remaining Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Types__c</fullName>
        <label>Opportunity Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Expansion - Upsell</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yearly_List_Price__c</fullName>
        <formula>IF( PricebookEntry.Id =&quot;01sf4000002ayVp&quot; ,ListPrice,ListPrice * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly List Price_DELETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Length_ms__c</fullName>
        <label>Discount Length ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Without_Discount__c</fullName>
        <label>Price Without Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enterprise_Opportunity_Stages__c</fullName>
        <label>Enterprise Opportunity Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Call</fullName>
                </value>
                <value>
                    <fullName>Champion Call</fullName>
                </value>
                <value>
                    <fullName>Technical Call</fullName>
                </value>
                <value>
                    <fullName>Legal Review</fullName>
                </value>
                <value>
                    <fullName>Security Review</fullName>
                </value>
                <value>
                    <fullName>Master Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Contract Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Fixed_Rest_Below_Zero__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Fixed Rest Below Zero</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Service_Opportunity_Stages__c</fullName>
        <label>Self Service Opportunity Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>